# W65C02

./: .clang-format  .gitignore  meson.build
include/: W65C02S.hpp  X62256.hpp  utils.hpp
src/: W65C02S.cpp  w65c02.cpp  w65c02.hpp
tests/: adc_tests.cpp  meson.build  test_X62256.6502.s  test_X62256.cpp  test_adc.6502.s  test_adc.cpp
w65c02_todo/: ! Instruction List.md  ADC.md  LDA.md
